--- a/_includes/crypto.html
+++ b/_includes/crypto.html
@@ -1,3 +1,7 @@
 <p><iframe id="widget-ticker-preview" src="https://www.coingecko.com/en/widget_component/ticker/xrp/eur" style="border:none; height:125px; width: 200px;" align="middle" scrolling="no" allowtransparency="true" frameborder="0"></iframe></p><p><iframe id="widget-ticker-preview" src="https://www.coingecko.com/en/widget_component/ticker/tron/eur" style="border:none; height:125px; width: 200x;" align="middle" scrolling="no" allowtransparency="true" frameborder="0"></iframe></p>
 
-<p><iframe id="widget-ticker-preview" src="https://www.coingecko.com/en/widget_component/ticker/xrp/eur" style="border:none; height:125px; width: 275px;" align="middle" scrolling="no" allowtransparency="true" frameborder="0"></iframe></p><p><iframe id="widget-ticker-preview" src="https://www.coingecko.com/en/widget_component/ticker/tron/eur" style="border:none; height:125px; width: 275px;" align="middle" scrolling="no" allowtransparency="true" frameborder="0"></iframe></p>
+<p><script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
+<coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget></p>
+
+<script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
+<coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget>
