--- a/_includes/crypto.html
+++ b/_includes/crypto.html
@@ -1,2 +1,1 @@
-<p><script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script>
-<coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget></p>
+<script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script><coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget>
