--- a/_includes/crypto.html
+++ b/_includes/crypto.html
@@ -1,1 +1,1 @@
-<script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script><coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget>
+<script src="https://widgets.coingecko.com/coingecko-coin-price-static-headline-widget.js"></script><coingecko-coin-price-static-headline-widget  coin-ids="ripple,tron,bitcoin" currency="eur" locale="en"></coingecko-coin-price-static-headline-widget>
