--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         
         <div class="logo">
           <a class="logo__link" href="{{ site.baseurl }}/">
-            <img class="logo__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
+            <img id="logo__mode" class="logo__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
           </a>
         </div>
         
