--- a/_includes/fortnite.html
+++ b/_includes/fortnite.html
@@ -1,5 +1,5 @@
 <center>
     <div>
-        <iframe src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Fortnite-Tracking/main/fortnite.html" frameborder="0"></iframe>
+        <iframe style="height: 100%;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Fortnite-Tracking/main/fortnite.html" frameborder="0"></iframe>
     </div>
 </center>
