--- a/_includes/fortnite.html
+++ b/_includes/fortnite.html
@@ -1,5 +1,1 @@
-<center>
-    <div>
-        <iframe style="height: 600; width: 100%;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Fortnite-Tracking/main/fortnite.html" frameborder="0"></iframe>
-    </div>
-</center>
+<iframe style="height: 600px; width: 98%; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Fortnite-Tracking/main/fortnite.html" frameborder="0"></iframe>
