Harmonized Blue Highlight Color

--- a/_sass/0-settings/_color-scheme.scss
+++ b/_sass/0-settings/_color-scheme.scss
@@ -1,7 +1,7 @@
 /* Color Scheme */
 
 :root {
-  --brand-color: #0056fe;
+  --brand-color: #068FFF;
   --white: #fff;
   --light-gray: #f0f0f0;
   --light-blue: #f3f7ff;
@@ -38,7 +38,7 @@
 }
 
 :root[dark] {
-  --brand-color: #0073ec;
+  --brand-color: #068FFF;
   --white: #fff;
   --light-gray: #f0f0f0;
   --gray: #bdbdbd;
