View Height Update

--- a/_includes/movies.html
+++ b/_includes/movies.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic iFrame Height</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-</head>
-<body>
-    <iframe id="contentFrame" style="width: 98%; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" frameborder="0"></iframe>
-
-    <script>
-        function resizeIframe() {
-            var iframe = document.getElementById('contentFrame');
-            iframe.style.height = iframe.contentWindow.document.documentElement.scrollHeight + 'px';
-        }
-
-        document.getElementById('contentFrame').addEventListener('load', resizeIframe);
-    </script>
-</body>
-</html>
+<iframe style="width: 98%; height: 300vh; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" frameborder="0"></iframe>
