--- a/_includes/movies.html
+++ b/_includes/movies.html
@@ -1,1 +1,3 @@
 <iframe style="width: 98%; height: 300vh; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" frameborder="0"></iframe>
+
+<iframe src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
