--- a/_includes/movies.html
+++ b/_includes/movies.html
@@ -1,3 +1,56 @@
 <iframe style="width: 98%; height: 300vh; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" frameborder="0"></iframe>
-
+<br>
+<br>
 <iframe src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+<br>
+<br>
+
+
+<script type="application/javascript">
+
+function resizeIFrameToFitContent( iFrame ) {
+
+    iFrame.width  = iFrame.contentWindow.document.body.scrollWidth;
+    iFrame.height = iFrame.contentWindow.document.body.scrollHeight;
+}
+
+window.addEventListener('DOMContentLoaded', function(e) {
+
+    var iFrame = document.getElementById( 'iFrame1' );
+    resizeIFrameToFitContent( iFrame );
+
+    // or, to resize all iframes:
+    var iframes = document.querySelectorAll("iframe");
+    for( var i = 0; i < iframes.length; i++) {
+        resizeIFrameToFitContent( iframes[i] );
+    }
+} );
+
+</script>
+
+<iframe src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" id="iFrame1"></iframe>
+<br>
+<br>
+
+
+
+<html>
+<head>
+    <style>
+    body, html {width: 100%; height: 100%; margin: 0; padding: 0}
+    .row-container {display: flex; width: 100%; height: 100%; flex-direction: column; background-color: blue; overflow: hidden;}
+    .first-row {background-color: lime; }
+    .second-row { flex-grow: 1; border: none; margin: 0; padding: 0; }
+    </style>
+</head>
+
+<body>
+<div class="row-container">
+  <div class="first-row">
+    <p>Some text</p>
+    <p>And some more text</p>
+  </div>
+  <iframe src=""https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Movie-Recomendations/main/recommendations.html" class="second-row"></iframe>
+</div>
+</body>
+</html>
