--- a/year/2024/css/base.css
+++ b/year/2024/css/base.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-	font-size: 14px;
+	font-size: 1.0vw;
 	--page-padding: 1.5rem;
 	--color-text: #fff;
 	--color-bg: #12100e;
@@ -376,7 +376,7 @@ i {
 .content__img {
 	grid-area: content-img;
 	width: 50%;
-	max-width: 300px;
+	max-width: 50%;
 	height: auto;
 }
 
@@ -400,7 +400,7 @@ i {
 	text-transform: uppercase;
 	line-height: 1;
 	font-weight: normal;
-	font-size: clamp(2rem,6vw,5rem);
+	font-size: clamp(2rem,2vw,5rem);
 	margin: 0;
 	font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900;
 }
