Text Scaling Update

--- a/year/2024/css/base.css
+++ b/year/2024/css/base.css
@@ -5,8 +5,8 @@
 }
 
 :root {
-	font-size: 1.0vw;
-	--page-padding: 1.5rem;
+	font-size: 0.6vm;
+	--page-padding: 1.0rem;
 	--color-text: #fff;
 	--color-bg: #12100e;
 	--color-link: rgba(255,255,255,0.6);
@@ -376,7 +376,7 @@ i {
 .content__img {
 	grid-area: content-img;
 	width: 50%;
-	max-width: 50%;
+	max-width: 300px;
 	height: auto;
 }
 
@@ -400,7 +400,7 @@ i {
 	text-transform: uppercase;
 	line-height: 1;
 	font-weight: normal;
-	font-size: clamp(2rem,2vw,5rem);
+	font-size: clamp(2rem,3vw,5rem);
 	margin: 0;
 	font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900;
 }
@@ -416,7 +416,7 @@ i {
 }
 
 .content__text--narrow {
-	max-width: 90%;
+	max-width: 100%;
 }
 
 .content--intro {
