--- a/year/2024/css/base.css
+++ b/year/2024/css/base.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-	font-size: 0.6vm;
+	font-size: 0.85rem;
 	--page-padding: 1.0rem;
 	--color-text: #fff;
 	--color-bg: #12100e;
@@ -375,8 +375,8 @@ i {
 
 .content__img {
 	grid-area: content-img;
-	width: 50%;
-	max-width: 300px;
+	width: 0%;
+	max-width: 250px;
 	height: auto;
 }
 
@@ -400,7 +400,6 @@ i {
 	text-transform: uppercase;
 	line-height: 1;
 	font-weight: normal;
-	font-size: clamp(2rem,3vw,5rem);
 	margin: 0;
 	font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900;
 }
@@ -417,6 +416,7 @@ i {
 
 .content__text--narrow {
 	max-width: 100%;
+	font-size: 0.75rem;
 }
 
 .content--intro {
