--- a/year/2024_alt/css/base.css
+++ b/year/2024_alt/css/base.css
@@ -300,6 +300,14 @@ i {
 	font-variation-settings: "slnt" 0, "wdth" 100, "wght" 500, "INKT" 100;
 }
 
+.text-medium {
+	font-size: clamp(1.5rem,1vw,1rem);
+	max-width: 900px;
+	margin: 0 0 0.85em 0;
+	line-height: 1.2;
+	font-variation-settings: "slnt" 0, "wdth" 100, "wght" 500;
+}
+
 .content--sticky {
 	width: 100vw;
 	position: sticky;
@@ -347,7 +355,7 @@ i {
 }
 
 .content--card .content__title {
-	font-size: clamp(1.5rem,4vw,3.5rem);
+	font-size: clamp(1.5rem,1vw,3.5rem);
 }
 
 .content--card .content__title i {
@@ -392,7 +400,7 @@ i {
 	text-transform: uppercase;
 	line-height: 1;
 	font-weight: normal;
-	font-size: clamp(2rem,6vw,5rem);
+	font-size: clamp(2rem,1vw,5rem);
 	margin: 0;
 	font-variation-settings: "slnt" 0, "wdth" 400, "wght" 900;
 }
