--- a/_includes/weekly-post.html
+++ b/_includes/weekly-post.html
@@ -1,1 +1,1 @@
-<iframe style="overflow: auto;" src="https://raw.githubusercontent.com/clintjb/Weekly-Post/refs/heads/main/blog_post.html" frameborder="0"></iframe>
+<iframe style="overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/Weekly-Post/refs/heads/main/blog_post.html" frameborder="0"></iframe>
