Width & Scale Update

--- a/_includes/a350_map.html
+++ b/_includes/a350_map.html
@@ -1,6 +1,10 @@
 <center>
     <div>
-        <iframe style="height: 500px; width: 98%; overflow: auto;" src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/A350-Tracking/main/_data/flight_data_a350.html" frameborder="0"></iframe>
-        <img src="/images/posts/2021/a350-scale.png">
+        <iframe 
+            style="height: 900px; width: 100%; border: none;" 
+            src="https://htmlpreview.github.io/?https://raw.githubusercontent.com/clintjb/A350-Tracking/main/_data/flight_data_a350.html" 
+            loading="lazy"
+            title="A350 Flight Tracker">
+        </iframe>
     </div>
 </center>
